--- a/components/plasmic/amap_website/PlasmicContractCard.module.css
+++ b/components/plasmic/amap_website/PlasmicContractCard.module.css
@@ -8,8 +8,26 @@
   box-shadow: none;
   min-width: 200px;
   position: relative;
+  width: 200px;
+  height: 200px;
+  transition-property: all;
+  transition-duration: 150ms;
+  cursor: pointer;
   padding: var(--token-eReirMpIv) 0px;
   border: 1px none #d4cfa0;
+}
+.root:hover {
+  box-shadow: 0px 4px 16px 0px #00000033;
+}
+.image {
+  display: block;
+  position: relative;
+  width: 100px;
+  height: 100px;
+  max-width: 100%;
+  background: var(--token-WNBJHso-i);
+  flex-shrink: 0;
+  border-radius: 100%;
 }
 .freeBox___9JV3Z {
   flex-direction: column;
@@ -38,16 +56,6 @@
   > img {
   margin-top: var(--token-eReirMpIv);
 }
-.img__ltySs {
-  object-fit: cover;
-  max-width: 40%;
-}
-.img__ltySs > picture > img {
-  object-fit: cover;
-}
-.img__ltySs > .__wab_img-spacer > img {
-  object-fit: cover;
-}
 .freeBox__gPtl4 {
   position: relative;
   width: 100%;
@@ -64,94 +72,4 @@
   font-weight: 600;
   color: var(--token-B133__sIH);
   text-align: center;
-}
-.freeBox__dk3Vb {
-  display: flex;
-  position: relative;
-  flex-direction: column;
-  width: 100%;
-  height: auto;
-  min-width: 0;
-}
-.slotTargetDescription {
-  font-family: var(--token-ongjxvNd3);
-  font-size: 14px;
-}
-.freeBox__tFmn {
-  display: flex;
-  position: relative;
-  flex-direction: row;
-  align-items: flex-start;
-  justify-content: center;
-  width: 100%;
-  height: auto;
-  max-width: 100%;
-  min-width: 0;
-}
-.freeBox__ikG1E {
-  flex-direction: row;
-  display: flex;
-  width: 100%;
-  height: auto;
-  max-width: 100%;
-  padding-top: var(--token-eReirMpIv);
-  min-width: 0;
-  border-top: 1px none #c5c091;
-}
-.freeBox__ikG1E > :global(.__wab_flex-container) {
-  flex-direction: row;
-  justify-content: center;
-  align-items: flex-start;
-  min-width: 0;
-  margin-left: calc(0px - 0px);
-  width: calc(100% + 0px);
-}
-.freeBox__ikG1E > :global(.__wab_flex-container) > *,
-.freeBox__ikG1E > :global(.__wab_flex-container) > :global(.__wab_slot) > *,
-.freeBox__ikG1E > :global(.__wab_flex-container) > picture > img,
-.freeBox__ikG1E
-  > :global(.__wab_flex-container)
-  > :global(.__wab_slot)
-  > picture
-  > img {
-  margin-left: 0px;
-}
-.downloadButton {
-  flex-direction: row;
-  display: flex;
-  position: relative;
-  width: auto;
-  height: auto;
-  max-width: 100%;
-  padding: 0px;
-}
-.downloadButton > :global(.__wab_flex-container) {
-  flex-direction: row;
-  justify-content: flex-start;
-  align-items: stretch;
-  margin-left: calc(0px - 6px);
-  width: calc(100% + 6px);
-}
-.downloadButton > :global(.__wab_flex-container) > *,
-.downloadButton > :global(.__wab_flex-container) > :global(.__wab_slot) > *,
-.downloadButton > :global(.__wab_flex-container) > picture > img,
-.downloadButton
-  > :global(.__wab_flex-container)
-  > :global(.__wab_slot)
-  > picture
-  > img {
-  margin-left: 6px;
-}
-.svg {
-  position: relative;
-  object-fit: cover;
-  max-width: 100%;
-  width: 20px;
-  height: 20px;
-  color: var(--token-WNBJHso-i);
-  flex-shrink: 0;
-}
-.text {
-  font-family: var(--token-ongjxvNd3);
-  color: var(--token-WNBJHso-i);
 }
