--- a/components/plasmic/amap_website/PlasmicContract.module.css
+++ b/components/plasmic/amap_website/PlasmicContract.module.css
@@ -29,6 +29,9 @@
 }
 .h1 {
   text-align: center;
+  color: var(--token-pf4RLfMl0);
+  font-size: 48px;
+  font-family: var(--token-q1R6Co1cF);
   position: relative;
   width: 100%;
   height: auto;
@@ -40,17 +43,17 @@
   min-width: 0;
   margin: 96px 0px;
 }
-.img {
+.image {
   position: relative;
   object-fit: cover;
   max-width: 100%;
   width: 100px;
   margin-bottom: var(--token-2zjFq4DPV);
 }
-.img > picture > img {
+.image > picture > img {
   object-fit: cover;
 }
-.img > .__wab_img-spacer > img {
+.image > .__wab_img-spacer > img {
   object-fit: cover;
 }
 .downloadButton {
