--- a/components/plasmic/amap_website/PlasmicContracts.module.css
+++ b/components/plasmic/amap_website/PlasmicContracts.module.css
@@ -29,6 +29,9 @@
 }
 .h1 {
   text-align: center;
+  color: var(--token-pf4RLfMl0);
+  font-size: 48px;
+  font-family: var(--token-q1R6Co1cF);
   width: auto;
   height: auto;
   margin: 96px 0px;
@@ -36,6 +39,9 @@
 @media (min-width: 0px) and (max-width: 768px) {
   .h1 {
     text-align: left;
+    color: var(--token-pf4RLfMl0);
+    font-size: 48px;
+    font-family: var(--token-q1R6Co1cF);
     max-width: 100%;
     width: auto;
     height: auto;
@@ -70,12 +76,12 @@
 .freeBox__frs9T {
   display: grid;
   position: relative;
-  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(210px, 1fr));
   width: 100%;
   height: 100%;
   max-width: 100%;
-  grid-column-gap: 16px;
-  grid-row-gap: 16px;
+  grid-column-gap: 10px;
+  grid-row-gap: 10px;
   min-width: 0;
   min-height: 0;
   padding: 0px;
