--- a/components/plasmic/amap_website/PlasmicMembership.module.css
+++ b/components/plasmic/amap_website/PlasmicMembership.module.css
@@ -15,7 +15,7 @@
   max-width: 100%;
   position: relative;
 }
-.freeBox {
+.freeBox__e2MoN {
   display: flex;
   position: relative;
   flex-direction: column;
@@ -25,10 +25,13 @@
   height: auto;
   max-width: 100%;
   min-width: 0;
-  padding: 0px var(--token-eReirMpIv) var(--token-7R6fY6Np7);
+  padding: 0px var(--token-eReirMpIv);
 }
 .h1 {
   text-align: center;
+  color: var(--token-pf4RLfMl0);
+  font-size: 48px;
+  font-family: var(--token-q1R6Co1cF);
   position: relative;
   width: 100%;
   height: auto;
@@ -87,6 +90,20 @@
     margin: 0px 0px 16px;
   }
 }
+.freeBox__bkWx {
+  padding-top: var(--token-7R6fY6Np7);
+  padding-bottom: var(--token-7R6fY6Np7);
+  display: flex;
+  position: relative;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+  width: 100%;
+  height: auto;
+  max-width: 100%;
+  background: none;
+  min-width: 0;
+}
 .text {
   color: var(--token-WNBJHso-i);
   font-family: var(--token-ongjxvNd3);
@@ -94,10 +111,10 @@
   text-align: center;
   font-size: 30px;
   margin-bottom: var(--token-63kTP6Ueu);
-  position: relative;
   width: auto;
   height: auto;
   max-width: 800px;
+  margin-top: 0px;
 }
 .description {
   position: relative;
