--- a/components/plasmic/amap_website/PlasmicMembership.module.css
+++ b/components/plasmic/amap_website/PlasmicMembership.module.css
@@ -37,7 +37,7 @@
   height: auto;
   max-width: 800px;
   min-width: 0;
-  margin: 96px 0px;
+  margin: 96px 0px 48px;
 }
 .img {
   position: relative;
