--- a/components/plasmic/amap_website/PlasmicNewsArticle.module.css
+++ b/components/plasmic/amap_website/PlasmicNewsArticle.module.css
@@ -7,12 +7,26 @@
   overflow-x: hidden;
   justify-content: flex-start;
   align-items: center;
+  padding-right: var(--token-eReirMpIv);
+  padding-left: var(--token-eReirMpIv);
   min-width: 0;
   min-height: 0;
 }
 .header:global(.__wab_instance) {
   max-width: 100%;
   position: relative;
+}
+.article {
+  display: flex;
+  position: relative;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: auto;
+  max-width: 800px;
+  min-width: 0;
+  margin: 0px 0px var(--token-7R6fY6Np7);
 }
 .h1 {
   text-align: center;
@@ -22,7 +36,6 @@
   position: relative;
   width: 100%;
   height: auto;
-  max-width: 800px;
   display: flex;
   flex-direction: row;
   align-items: flex-start;
@@ -30,11 +43,10 @@
   min-width: 0;
   margin: 96px 0px 48px;
 }
-.freeBox__rupL7 {
+.freeBox {
   position: relative;
   width: 100%;
   height: auto;
-  max-width: 800px;
   margin-bottom: var(--token-L5ZvEOVLJ);
   display: flex;
   flex-direction: row;
@@ -45,19 +57,20 @@
   font-weight: 400;
   color: #797979;
 }
-.freeBox__wpVmz {
+.cover {
   display: block;
   position: relative;
   width: 100%;
-  height: auto;
-  max-width: 800px;
+  height: 400px;
+  background: none;
+  margin-bottom: var(--token-2zjFq4DPV);
   min-width: 0;
+  flex-shrink: 0;
 }
-.freeBox__vJ5Vk {
+.content {
   display: block;
   position: relative;
   width: 100%;
   height: auto;
-  max-width: 800px;
   min-width: 0;
 }
