--- a/components/plasmic/amap_website/PlasmicNews.module.css
+++ b/components/plasmic/amap_website/PlasmicNews.module.css
@@ -7,6 +7,7 @@
   overflow-x: hidden;
   justify-content: flex-start;
   align-items: center;
+  padding-bottom: var(--token-7R6fY6Np7);
   min-width: 0;
   min-height: 0;
 }
@@ -26,7 +27,7 @@
   min-width: 0;
   margin: 96px 0px 48px;
 }
-.freeBox {
+.freeBox__hzcTe {
   display: flex;
   position: relative;
   flex-direction: column;
@@ -34,7 +35,78 @@
   justify-content: center;
   width: 100%;
   height: auto;
-  max-width: 100%;
+  max-width: 800px;
   min-width: 0;
-  padding: 8px;
+}
+@media (min-width: 0px) and (max-width: 768px) {
+  .freeBox__hzcTe {
+    padding-right: var(--token-eReirMpIv);
+    padding-left: var(--token-eReirMpIv);
+  }
+}
+.freeBox__gZq4J {
+  display: flex;
+  position: relative;
+  flex-direction: row;
+  align-items: stretch;
+  justify-content: flex-start;
+  width: 100%;
+  height: 300px;
+  max-width: 100%;
+  margin-bottom: var(--token-zOZyz0Vdx);
+  min-width: 0;
+  flex-shrink: 0;
+}
+@media (min-width: 0px) and (max-width: 768px) {
+  .freeBox__gZq4J {
+    align-items: flex-start;
+    justify-content: center;
+    height: auto;
+  }
+}
+.articleCard__dxnWj:global(.__wab_instance) {
+  max-width: 100%;
+}
+.freeBox__hifXe {
+  display: grid;
+  position: relative;
+  grid-template-columns: 1fr 1fr 1fr;
+  width: 100%;
+  height: auto;
+  max-width: 100%;
+  min-height: 400px;
+  grid-column-gap: 24px;
+  grid-row-gap: 60px;
+  min-width: 0;
+}
+@media (min-width: 0px) and (max-width: 768px) {
+  .freeBox__hifXe {
+    grid-template-columns: 1fr 1fr;
+  }
+}
+@media (max-width: 640px) {
+  .freeBox__hifXe {
+    grid-template-columns: 1fr;
+  }
+}
+.articleCard__j9SfL:global(.__wab_instance) {
+  position: relative;
+}
+.articleCard__isWU:global(.__wab_instance) {
+  position: relative;
+}
+.articleCard__vw3Jj:global(.__wab_instance) {
+  position: relative;
+}
+.articleCard___9R33Q:global(.__wab_instance) {
+  position: relative;
+}
+.articleCard__pdq7:global(.__wab_instance) {
+  position: relative;
+}
+.articleCard__hhdj:global(.__wab_instance) {
+  position: relative;
+}
+.articleCard__xEMxz:global(.__wab_instance) {
+  position: relative;
 }
