--- a/components/plasmic/amap_website/PlasmicNews.module.css
+++ b/components/plasmic/amap_website/PlasmicNews.module.css
@@ -8,6 +8,7 @@
   justify-content: flex-start;
   align-items: center;
   padding-bottom: var(--token-7R6fY6Np7);
+  background: url("/plasmic/amap_website/images/concreteTexture.png") top 50% left 50% / contain repeat;
   min-width: 0;
   min-height: 0;
 }
