--- a/components/plasmic/amap_website/PlasmicHomepage.module.css
+++ b/components/plasmic/amap_website/PlasmicHomepage.module.css
@@ -161,11 +161,7 @@
 .freeBox__oPxo6 > :global(.__wab_flex-container) > *,
 .freeBox__oPxo6 > :global(.__wab_flex-container) > :global(.__wab_slot) > *,
 .freeBox__oPxo6 > :global(.__wab_flex-container) > picture > img,
-.freeBox__oPxo6
-  > :global(.__wab_flex-container)
-  > :global(.__wab_slot)
-  > picture
-  > img {
+.freeBox__oPxo6 > :global(.__wab_flex-container) > :global(.__wab_slot) > picture > img {
   margin-left: var(--token-zOZyz0Vdx);
   margin-top: var(--token-2zjFq4DPV);
 }
@@ -334,11 +330,7 @@
 .freeBox__wso7 > :global(.__wab_flex-container) > *,
 .freeBox__wso7 > :global(.__wab_flex-container) > :global(.__wab_slot) > *,
 .freeBox__wso7 > :global(.__wab_flex-container) > picture > img,
-.freeBox__wso7
-  > :global(.__wab_flex-container)
-  > :global(.__wab_slot)
-  > picture
-  > img {
+.freeBox__wso7 > :global(.__wab_flex-container) > :global(.__wab_slot) > picture > img {
   margin-top: var(--token-xmbQtwPzW);
 }
 @media (min-width: 0px) and (max-width: 768px) {
@@ -358,11 +350,7 @@
   .freeBox__wso7 > :global(.__wab_flex-container) > *,
   .freeBox__wso7 > :global(.__wab_flex-container) > :global(.__wab_slot) > *,
   .freeBox__wso7 > :global(.__wab_flex-container) > picture > img,
-  .freeBox__wso7
-    > :global(.__wab_flex-container)
-    > :global(.__wab_slot)
-    > picture
-    > img {
+  .freeBox__wso7 > :global(.__wab_flex-container) > :global(.__wab_slot) > picture > img {
     margin-left: 0px;
     margin-top: var(--token-zOZyz0Vdx);
   }
@@ -387,11 +375,7 @@
 .freeBox__rheQ5 > :global(.__wab_flex-container) > *,
 .freeBox__rheQ5 > :global(.__wab_flex-container) > :global(.__wab_slot) > *,
 .freeBox__rheQ5 > :global(.__wab_flex-container) > picture > img,
-.freeBox__rheQ5
-  > :global(.__wab_flex-container)
-  > :global(.__wab_slot)
-  > picture
-  > img {
+.freeBox__rheQ5 > :global(.__wab_flex-container) > :global(.__wab_slot) > picture > img {
   margin-left: var(--token-L5ZvEOVLJ);
 }
 @media (max-width: 640px) {
@@ -413,11 +397,7 @@
   .freeBox__rheQ5 > :global(.__wab_flex-container) > *,
   .freeBox__rheQ5 > :global(.__wab_flex-container) > :global(.__wab_slot) > *,
   .freeBox__rheQ5 > :global(.__wab_flex-container) > picture > img,
-  .freeBox__rheQ5
-    > :global(.__wab_flex-container)
-    > :global(.__wab_slot)
-    > picture
-    > img {
+  .freeBox__rheQ5 > :global(.__wab_flex-container) > :global(.__wab_slot) > picture > img {
     margin-left: 0px;
     margin-top: var(--token-eReirMpIv);
   }
@@ -513,11 +493,7 @@
 .freeBox__rrAdi > :global(.__wab_flex-container) > *,
 .freeBox__rrAdi > :global(.__wab_flex-container) > :global(.__wab_slot) > *,
 .freeBox__rrAdi > :global(.__wab_flex-container) > picture > img,
-.freeBox__rrAdi
-  > :global(.__wab_flex-container)
-  > :global(.__wab_slot)
-  > picture
-  > img {
+.freeBox__rrAdi > :global(.__wab_flex-container) > :global(.__wab_slot) > picture > img {
   margin-left: var(--token-L5ZvEOVLJ);
 }
 @media (max-width: 640px) {
@@ -539,11 +515,7 @@
   .freeBox__rrAdi > :global(.__wab_flex-container) > *,
   .freeBox__rrAdi > :global(.__wab_flex-container) > :global(.__wab_slot) > *,
   .freeBox__rrAdi > :global(.__wab_flex-container) > picture > img,
-  .freeBox__rrAdi
-    > :global(.__wab_flex-container)
-    > :global(.__wab_slot)
-    > picture
-    > img {
+  .freeBox__rrAdi > :global(.__wab_flex-container) > :global(.__wab_slot) > picture > img {
     margin-left: 0px;
     margin-top: var(--token-eReirMpIv);
   }
@@ -637,11 +609,7 @@
 .freeBox___1Iy6R > :global(.__wab_flex-container) > *,
 .freeBox___1Iy6R > :global(.__wab_flex-container) > :global(.__wab_slot) > *,
 .freeBox___1Iy6R > :global(.__wab_flex-container) > picture > img,
-.freeBox___1Iy6R
-  > :global(.__wab_flex-container)
-  > :global(.__wab_slot)
-  > picture
-  > img {
+.freeBox___1Iy6R > :global(.__wab_flex-container) > :global(.__wab_slot) > picture > img {
   margin-left: var(--token-L5ZvEOVLJ);
 }
 @media (max-width: 640px) {
@@ -661,11 +629,7 @@
   .freeBox___1Iy6R > :global(.__wab_flex-container) > *,
   .freeBox___1Iy6R > :global(.__wab_flex-container) > :global(.__wab_slot) > *,
   .freeBox___1Iy6R > :global(.__wab_flex-container) > picture > img,
-  .freeBox___1Iy6R
-    > :global(.__wab_flex-container)
-    > :global(.__wab_slot)
-    > picture
-    > img {
+  .freeBox___1Iy6R > :global(.__wab_flex-container) > :global(.__wab_slot) > picture > img {
     margin-left: 0px;
   }
 }
