--- a/components/plasmic/amap_website/PlasmicArticleCard.module.css
+++ b/components/plasmic/amap_website/PlasmicArticleCard.module.css
@@ -32,11 +32,7 @@
 .roothorizontal > :global(.__wab_flex-container) > *,
 .roothorizontal > :global(.__wab_flex-container) > :global(.__wab_slot) > *,
 .roothorizontal > :global(.__wab_flex-container) > picture > img,
-.roothorizontal
-  > :global(.__wab_flex-container)
-  > :global(.__wab_slot)
-  > picture
-  > img {
+.roothorizontal > :global(.__wab_flex-container) > :global(.__wab_slot) > picture > img {
   margin-left: var(--token-eReirMpIv);
   margin-top: 0px;
 }
@@ -57,11 +53,7 @@
   .roothorizontal > :global(.__wab_flex-container) > *,
   .roothorizontal > :global(.__wab_flex-container) > :global(.__wab_slot) > *,
   .roothorizontal > :global(.__wab_flex-container) > picture > img,
-  .roothorizontal
-    > :global(.__wab_flex-container)
-    > :global(.__wab_slot)
-    > picture
-    > img {
+  .roothorizontal > :global(.__wab_flex-container) > :global(.__wab_slot) > picture > img {
     margin-left: 0px;
   }
 }
