--- a/components/plasmic/amap_website/PlasmicContact.module.css
+++ b/components/plasmic/amap_website/PlasmicContact.module.css
@@ -277,11 +277,7 @@
 .freeBox__btpo0 > :global(.__wab_flex-container) > *,
 .freeBox__btpo0 > :global(.__wab_flex-container) > :global(.__wab_slot) > *,
 .freeBox__btpo0 > :global(.__wab_flex-container) > picture > img,
-.freeBox__btpo0
-  > :global(.__wab_flex-container)
-  > :global(.__wab_slot)
-  > picture
-  > img {
+.freeBox__btpo0 > :global(.__wab_flex-container) > :global(.__wab_slot) > picture > img {
   margin-left: var(--token-xmbQtwPzW);
 }
 @media (min-width: 0px) and (max-width: 768px) {
