--- a/components/plasmic/amap_website/PlasmicSiteLogo.module.css
+++ b/components/plasmic/amap_website/PlasmicSiteLogo.module.css
@@ -37,7 +37,7 @@
   height: auto;
   max-width: 800px;
   color: var(--token-WNBJHso-i);
-  font-family: "Dosis", sans-serif;
+  font-family: 'Dosis', sans-serif;
   font-weight: 800;
   align-self: center;
   font-size: 20px;
